# python-exercises

./: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: python-package.yml
ackermann/: ackermannCache.py  test_ackermanCache.py
flow/: .gitignore  drawGrid.py  flowCell.py  flowGrid.py
flow/flowData/: 2016-05-05_01.flow  2016-05-05_02.flow  2016-05-05_03.flow  2016-05-05_04.flow
lib/: CursesMixin.py  Script.py
life/: Script.py  gameOfLife.py  test_gameOfLife.py
sandpile/: Sandpile.py
sorting/: insertionSort.py~  mergeSort.py  opBubbleSort.py  quickSort.py  sorter.py  sorter.py~  stupidSort.py  stupidSort.py~  test_sorter.py  test_sorter.py~
src/ackermann/: ackermann.py
src/life/: __main__.py  game.py  game_of_life.py  generation.py  rle.py  rule.py
src/sorting/: bubble_sort.py  cocktailShaker.py  cocktail_shaker.py  insertionSort.py  insertion_sort.py  merge_sort.py  opBubbleSort.py  quickSort.py  quick_sort.py  sortDemo.py  sort_demo.py  sorter.py  stupidSort.py  stupid_sort.py  timsort.py
src/sudoku/: ColourText.py  cell.py  grid.py  simple_solver.py  solver.py  sudokuCell.py  sudokuGrid.py  sudokuSolver.py  sudokuSolverSimple.py
sudoku/: ColourText.py  sudokuCell.py  sudokuGrid.py  sudokuSolver.py  sudokuSolverHiddenSingles.py  sudokuSolverSimple.py  test_sudokuCell.py  test_sudokuGrid.py
tests/ackermann/: test_ackermanCache.py  test_ackermann.py
tests/life/: test_game.py  test_gameOfLife.py  test_game_of_life.py  test_generation.py  test_rle.py  test_rule.py
tests/sorting/: test_sorter.py
tests/sudoku/: conftest.py  test_cell.py  test_grid.py  test_simple_solver.py  test_solver.py  test_sudokuCell.py  test_sudokuGrid.py
tests/sudoku/testData/: guardian.sud
wordclock/: WordClock.py
