[tool.poetry]
name = "python-exercises"
version = "0.0.1"
description = ""
authors = ["kevna <lakevna@gmail.com>"]
packages = [
    { include = "ackermann", from = "src" },
    { include = "life", from = "src" },
    { include = "sorting", from = "src" },
    { include = "sudoku", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
