[tool.poetry]
name = "python-exercises"
version = "0.0.1"
description = ""
authors = ["kevna <lakevna@gmail.com>"]
packages = [
    { include = "ackermann", from = "src" },
    { include = "life", from = "src" },
    { include = "sorting", from = "src" },
    { include = "sudoku", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"
ansi = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
pylint-quotes = "^0.2.3"
pylint-pytest = "^1.1.2"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
